k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-gateway-prod-service
  namespace: six-degrees-apps
spec:
  selector:
    app: sms-gateway-prod
  ports:
    - port: 1337
      targetPort: 1337
      protocol: TCP
  type: ClusterIP
