k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sms-gateway-prod-ingress
  namespace: six-degrees-apps
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sms.6d.com.sa
      secretName: sms-gateway-prod-tls
  rules:
  - host: sms.6d.com.sa
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sms-gateway-prod-service
              port:
                number: 1337
